--- a/chapitre8.tex
+++ b/chapitre8.tex
@@ -1,4 +1,6 @@
 \chapter{Algorithmes d'optimisation}
+\label{chap:Algorithmes d'optimisation}
+
 \section{Motivation}
 Il existe une grande variété d'algorithmes permettant la minimisation de la fonction de coût autres que la descente de gradient présentée précédemment. Ce chapitre aura pour but de présenter les plus populaires d'entre eux et d'en donner les principales caractéristiques. Nous les comparerons ensuite pour retenir les solutions les plus efficaces.
 
