Page de garde refaite

--- a/compte-rendu.tex
+++ b/compte-rendu.tex
@@ -35,7 +35,13 @@
 \newtheorem{remark}{Remarque}
 \newtheorem{example}{Exemple}
 	
-\title{Compte-rendu}
+\title{\scshape\begin{Huge}Apprentissage\\ Automatique de Séquences \\
+\end{Huge}
+\begin{LARGE}
+Compte-Rendu
+\end{LARGE}}
+
+\date{2016-2017}
 \author{Vincent \textsc{Auriau} -- Laurent \textsc{Beaughon} -- Marc \textsc{Belicard} \\ Yaqine \textsc{Hechaichi} -- Thaïs \textsc{Rahoul} -- Pierre \textsc{Vigier}}
 
 \begin{document}
