Modify the first page

--- a/compte-rendu.tex
+++ b/compte-rendu.tex
@@ -42,7 +42,7 @@ Compte-Rendu
 \end{LARGE}}
 
 \date{2016-2017}
-\author{Vincent \textsc{Auriau} -- Laurent \textsc{Beaughon} -- Marc \textsc{Belicard} \\ Yaqine \textsc{Hechaichi} -- Thaïs \textsc{Rahoul} -- Pierre \textsc{Vigier}}
+\author{Vincent \textsc{Auriau} -- Laurent \textsc{Beaughon} -- Marc \textsc{Belicard} \\ Yaqine \textsc{Hechaichi} -- Thaïs \textsc{Rahoul} -- Pierre \textsc{Vigier} \\ encadrés par Joanna \textsc{Tomasik} et Arpad \textsc{Rimmel}}
 
 \begin{document}
 
