--- a/compte-rendu.tex
+++ b/compte-rendu.tex
@@ -35,18 +35,39 @@
 \newtheorem{remark}{Remarque}
 \newtheorem{example}{Exemple}
 	
-\title{\scshape\begin{Huge}Apprentissage\\ Automatique de Séquences \\
+\title{\scshape{\begin{Huge}Apprentissage\\ Automatique de Séquences \\
 \end{Huge}
 \begin{LARGE}
 Compte-Rendu
-\end{LARGE}}
+\end{LARGE}}}
 
 \date{2016-2017}
 \author{Vincent \textsc{Auriau} -- Laurent \textsc{Beaughon} -- Marc \textsc{Belicard} \\ Yaqine \textsc{Hechaichi} -- Thaïs \textsc{Rahoul} -- Pierre \textsc{Vigier} \\ encadrés par Joanna \textsc{Tomasik} et Arpad \textsc{Rimmel}}
 
 \begin{document}
 
-\maketitle
+\begin{titlepage}
+\vspace*{\stretch{1}}
+\begin{center} 
+\textsc{\begin{Huge}Apprentissage\\ Automatique de Séquences \\
+\end{Huge}
+\vspace{0.5cm}
+\begin{LARGE}
+Compte-Rendu \\
+\end{LARGE}}
+\vspace{2cm}
+\begin{large}
+Vincent \textsc{Auriau} -- Laurent \textsc{Beaughon} -- Marc \textsc{Belicard} \\ Yaqine \textsc{Hechaichi} -- Thaïs \textsc{Rahoul} -- Pierre \textsc{Vigier} \\
+\vspace{0.5cm}
+encadrés par Joanna \textsc{Tomasik} et Arpad \textsc{Rimmel} \\
+\vspace{0.5cm}
+2016 - 2017 \\
+\end{large}
+\vspace{2cm}
+\includegraphics[width=0.5\textwidth]{images/logo.jpeg}
+\end{center} 
+\vspace*{\stretch{1}}
+\end{titlepage} 
 
 \tableofcontents
 
